# turbo-fiesta

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  turbo-fiesta.sln
frontend/: package.json
frontend/src/: App.tsx  global.css  index.tsx  styles.module.css  types.ts
frontend/src/components/: ComputerBox.tsx  LabelBox.tsx
nfc-reader/: index.html
sessionmgr/: .gitignore  AppEnv.cs  GPTInterface.cs  Program.cs  WSClient.cs  WindowInfo.cs  prompt.txt  sessionmgr.csproj
src/: client.rs  comp.rs  enum.rs  info.rs  rearend.rs  serve.rs  server.rs  socket_c.rs  socket_s.rs
