[package]
name = "turbo-fiesta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.20.1"
url = "2.4.1"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "socket_c"
path = "src/socket_c.rs"

[[bin]]
name = "socket_s"
path = "src/socket_s.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"
